--- a/AppWeb/Views/Shared/_navbar.cshtml
+++ b/AppWeb/Views/Shared/_navbar.cshtml
@@ -16,6 +16,11 @@
                         <i class="now-ui-icons ui-1_simple-add x2 mr-2"></i>CREATE
                     </a>
                 </li>
+                <li class="nav-item mx-1 align-items-center d-flex justify-content-center">
+                    <a class="nav-link" href="@Url.Action("GetListEmployeesViewAsync","Employe")">
+                        <i class="now-ui-icons business_globe x2 mr-2"></i>EMPLOYEES
+                    </a>
+                </li>
             </ul>
             <a class="btn btn-light text-primary" href="@Url.Action("GetEmployeeViewAsync","Employe")">
                 <i class="now-ui-icons users_single-02 mr-1"></i>ACCOUNT
