--- a/AppWeb/Views/Offre/ListesOffres.cshtml
+++ b/AppWeb/Views/Offre/ListesOffres.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AppWeb.Models
+@using AppWeb.Ressources
 
 @model List<OffreViewModel>
 
@@ -19,10 +20,10 @@
             else
             {
                 <div class="col-md-12">
-                    <h3 class="mb-2"><b>All the offers</b></h3>
+                    <h3 class="mb-2"><b>@ResourceEN.AllOffers</b></h3>
                 </div>
             }
-            
+
         </div>
         <div class="row py-4">
             <div class="col-md-12">
@@ -33,7 +34,7 @@
                         </span>
                     </div>
                     <form class="" action="@Url.Action("SearchOffre","Offre")">
-                        @Html.TextBox("searchText", null, new { style = "padding: 1.7rem;font-size: large;", @class = "form-control mx-2 form-control-lg", placeholder = "Ex : Web developer" })
+                        @Html.TextBox("searchText", null, new { style = "padding: 1.7rem;font-size: large;", @class = "form-control mx-2 form-control-lg", placeholder = ResourceEN.PlaceHolderJob })
                     </form>
                 </div>
             </div>
@@ -41,6 +42,20 @@
         @Html.Partial("_listeOffres", Model)
     </div>
 </div>
+
+
+<div class="py-4">
+    <div class="container">
+        <div class="row py-5">
+            <div class="col-md-8 mx-auto text-center">
+                <a class="btn btn-light mr-1 rounded btn-lg text-primary" href="@Url.Action("CreateOfferView","Offre")">
+                    <i class="now-ui-icons ui-1_simple-add mr-1"></i> @ResourceEN.CreateOffer
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <script>
     $("#searchText").on("keyup", function (e) {
